--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
 <body>
 	<div>
 		<h1 data-bind ="text:name"></h1>
-		<div data-bind></div>
-		<img data-bind  src="">
+		<div data-bind = "text : clickCount"></div>
+		<img data-bind = "click: incrementCounter , attr:{src: imgSrc}"  src="">
 	</div>
-	<script type="text/javascript" src="js/app.js"></script>
 	<script type="text/javascript" src="js/knockout-3.4.2.js"></script>
 
+	<script type="text/javascript" src="js/app.js"></script>
+	
 </body>
 </html>
