--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<h1 data-bind ="text:name"></h1>
 		<div data-bind = "text : clickCount"></div>
 		<img data-bind = "click: incrementCounter , attr:{src: imgSrc}"  src="">
+		<h2 data-bind = "text: Nickname"> </h2>
 	</div>
 	<script type="text/javascript" src="js/knockout-3.4.2.js"></script>
 
