--- a/knockout-tutorials/index.html
+++ b/knockout-tutorials/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 	<title></title>
+	<script type="text/javascript" src= "js/knockout-3.4.2.js"></script>
+	<script type="text/javascript" src = "js/app.js"></script>
 </head>
 <body>
 	<h1>People</h1>
@@ -13,6 +15,8 @@
 		</li>
 	</ul>
 	<button data-bind = "click: addPerson">Add</button>
+	
+
 
 
 </body>
