fixes:cat's nickname

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div>
 			<h3> NickName </h3>
 				<ul data-bind = "foreach : currentCat().Nickname">
-					<li data-bind = text: $data></li>
+					<li data-bind = "text:$data"></li>
 				</ul>
 		
 		</div>
